[gd_scene load_steps=14 format=3 uid="uid://ewsbm4nr5s05"]

[ext_resource type="Texture2D" uid="uid://djrvks8vxuxkf" path="res://Art/UI/Main_Menu.png" id="1_28flt"]
[ext_resource type="Script" uid="uid://ccpq7t508hr41" path="res://Scenes/main_menu.gd" id="1_cp0ys"]
[ext_resource type="Texture2D" uid="uid://br050g30ocu5c" path="res://Art/UI/Cursor.png" id="2_48xlc"]
[ext_resource type="PackedScene" uid="uid://b4c17usa6vwgb" path="res://Scenes/Components/sfx_player.tscn" id="2_yhxw7"]
[ext_resource type="Texture2D" uid="uid://c1142igobu8gj" path="res://Art/UI/Main_Menu_Start_Unfocused.png" id="3_yhxw7"]
[ext_resource type="Texture2D" uid="uid://dd8oihdeuf7sg" path="res://Art/UI/Main_Menu_Start_Focused.png" id="4_trj04"]
[ext_resource type="Texture2D" uid="uid://bmfethwydabxs" path="res://Art/UI/Main_Menu_Exit_Unfocused.png" id="5_16hvj"]
[ext_resource type="Texture2D" uid="uid://dfsbi0nafv0oo" path="res://Art/UI/Main_Menu_Exit_Focused.png" id="6_vr1f0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1ehe0"]
atlas = ExtResource("2_48xlc")
region = Rect2(0, 0, 14, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce3w2"]
atlas = ExtResource("2_48xlc")
region = Rect2(14, 0, 14, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_n45e2"]
atlas = ExtResource("2_48xlc")
region = Rect2(0, 13, 14, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_opfnp"]
atlas = ExtResource("2_48xlc")
region = Rect2(14, 13, 14, 13)

[sub_resource type="SpriteFrames" id="SpriteFrames_cp0ys"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ehe0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce3w2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n45e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opfnp")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 485.0
offset_bottom = 275.0
scale = Vector2(2, 2)
script = ExtResource("1_cp0ys")

[node name="SfxPlayer" parent="." instance=ExtResource("2_yhxw7")]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0509804, 0.0862745, 0.0509804, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -192.0
offset_right = 192.0
offset_bottom = 192.0
grow_horizontal = 2
texture = ExtResource("1_28flt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.5
offset_top = -28.0
offset_right = 24.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 45

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="StartButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath(".")
focus_neighbor_bottom = NodePath("../ExitButton")
texture_normal = ExtResource("3_yhxw7")
texture_focused = ExtResource("4_trj04")

[node name="ExitButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../StartButton")
texture_normal = ExtResource("5_16hvj")
texture_focused = ExtResource("6_vr1f0")

[node name="CursorLeft" type="AnimatedSprite2D" parent="."]
position = Vector2(198.5, 196)
sprite_frames = SubResource("SpriteFrames_cp0ys")
autoplay = "default"

[node name="CursorRight" type="AnimatedSprite2D" parent="."]
position = Vector2(285.5, 198.5)
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_cp0ys")
autoplay = "default"

[connection signal="focus_entered" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_focus_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_focus_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
